style: fix header spacing

--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ section {
       }
     }
   }
+
+  hgroup {
+    p {
+      margin-top: 0.5rem;
+    }
+  }
 }
 
 section-header {
